@@ -24,7 +24,7 @@ nw_ethernet()  {
 
   netconf &&
   cp -af --parents /etc/sysconfig/network "${TARGET}" &&
-  debug_log "network" "Running netconf"               &&
+  debug_log "network" 2 "Running netconf"               &&
 
   #TODO make this more intelligent! not quite right question
   if confirm "Do you want to start networking now?"; then
@@ -36,14 +36,14 @@ nw_ethernet()  {
     done                                                        &&
 
     cp -f /etc/resolv.conf  ${TARGET}/etc/resolv.conf           &&
-    debug_log "network" "starting ethernet interfaces"          &&
+    debug_log "network" 1 "starting ethernet interfaces"          &&
     fill_dependency network on                                  ||
     fill_dependency network off
     # Okay, we configured it, couldn't start it - mark it as configured anyway
 
     popd >/dev/null
   else
-    debug_log "network" "declined to start ethernet interface"
+    debug_log "network" 1 "declined to start ethernet interface"
     fill_dependency network off
   fi
 }
@@ -78,11 +78,11 @@ nw_ppp()  {
   if confirm "Should a connection be started now?"; then
     pon isp &&
     cp -f /etc/resolv.conf  ${TARGET}/etc       &&
-    echo "starting ppp interface" >> /tmp/installer-debug &&
+    debug_log "network" 1 "starting ppp interface" &&
     fill_dependency network on ||
     fill_dependency network off
   else
-    echo "declined to start ppp interface" >> /tmp/installer-debug
+    debug_log "network" 1 "declined to start ppp interface"
     fill_dependency network off
   fi
 
@@ -100,16 +100,16 @@ nw_pppoe()  {
                    "ndiswrapper" "NDISwrapper provides support for wireless cards with win-only drivers" "off")
 
   adsl-setup &&
-  echo "Setting up adsl via adsl-setup" >> /tmp/installer-debug &&
+  debug_log "network" 2 "Setting up adsl via adsl-setup" &&
 
   if confirm "Start that interface now ?"; then
     adsl-start
     cp -f /etc/resolv.conf  ${TARGET}/etc       &&
-    echo "starting adsl interface" >> /tmp/installer-debug &&
+    debug_log "network" 1 "starting adsl interface" &&
     fill_dependency network on ||
     fill_dependency network off
   else
-    echo "declined to start adsl interface" >> /tmp/installer-debug
+    debug_log "network" 1 "declined to start adsl interface"
     fill_dependency network off
   fi
 
@@ -135,17 +135,16 @@ nw_main()  {
   mkdir -p ${TARGET}/etc/sysconfig/network
 
   # get a hostname (remove /etc/hostname to force reconfigure)
-  rm -f /etc/hostname      &&
+  rm -f /etc/hostname
   netconf --check_hostname
 
-  # TODO: Move all this kind of junk to a debug_log function
-  echo "hostname is `cat /etc/hostname`" >> /tmp/installer-debug
+  debug_log "network" 2 "hostname is `cat /etc/hostname`"
 
   cp -f /etc/hostname ${TARGET}/etc/hostname
 
   local COMMAND
 
-  COMMAND=`"${DIALOG[@]}"  --title "Networking Setup"                         \
+  COMMAND=`run_dialog  --title "Networking Setup"                             \
              --nocancel --item-help --menu                                    \
              "Please select the way this box will connect to the internet"    \
              7 60 0                                                           \
