@@ -1,3 +1,7 @@
+2005-10-11 Karsten Behrmann <BearPerson@sourcemage.org>
+	* modules/debug: add debug framework
+	* installer.sh, modules/*: employ new debug framework
+
 2005-09-30 Karsten Behrmann <BearPerson@sourcemage.org>
 	* doc/known_issues: add document for common problems and their fixes
 	* doc/chroot-howto: add memo on chroot generation and pitfalls
